--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,18 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-#  - name: Posts
-#    url: '#posts'
-#    weight: 20
+  - name: Science communication
+    url: '#featured'
+    weight: 50
+  - name: Gallery
+    url: '#posts'
+    weight: 20
 #  - name: Projects
 #    url: '#projects'
 #    weight: 30
 #  - name: Talks
 #    url: '#talks'
 #    weight: 40
-  - name: Science communication
-    url: '#featured'
-    weight: 50
   - name: Contact
     url: '#contact'
     weight: 60
