--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,10 +12,10 @@ website:
 
     right: 
       - icon: github
-        href: https://github.com/hds-sandbox
+        href: https://github.com/albarema
         aria-label: GitHub
       - icon: linkedin
-        href: https://www.linkedin.com/company/ucph-heads
+        href: https://dk.linkedin.com/in/albarefoyo
         aria-label: LinkedIn
       - icon: twitter
         href: https://twitter.com/ucph_heads
